# cpp_service_locator

./: CMakeLists.txt  README.md  build.sh
example/: DecoderHardwareImpl.hpp  DecoderInterface.hpp  DecoderSoftwareImpl.hpp  LoggerFileImpl.hpp  LoggerInterface.hpp  LoggerNetworkImpl.hpp  VideoPlayer.hpp  main.cpp
inc/: ServiceLocator.hpp
src/: ServiceLocator.cpp
test/: ServiceLocatorTests.cpp
